@@ -609,16 +609,6 @@ setMethod("[", signature(x = "Matrix", i = "matrix", j = "missing", drop="missin
 
 ### "[<-" : -----------------
 
-## x[] <- value :
-setReplaceMethod("[", signature(x = "Matrix", i = "missing", j = "missing",
-                                value = "ANY"),## double/logical/...
-	  function (x, value) {
-	      ## Fails for 'nMatrix' ... FIXME : make sure have method there
-	      x@x <- rep(value, length = length(x@x))
-	      validObject(x)# check if type and lengths above match
-	      x
-          })
-
 ## A[ ij ] <- value,  where ij is (i,j) 2-column matrix :
 ## ----------------
 ## The cheap general method --- FIXME: provide special ones; done for Tsparse..
